# strong_type

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  conanfile.txt
include/st/: is_strong_type.hpp  st.hpp  traits.hpp  type.hpp  unwrap.hpp
include/st/details/: this_cast.hpp
tests/: strong_type-tests.cpp
